# space_email_api

./: Cargo.toml  LICENSE  README.md
src/: client.rs  data.rs  lib.rs  tests.rs
