[package]
name = "space_email_api"
version = "0.2.0"
authors = ["AlphaModder"]
description = "A rust interface to Space Email (space.galaxybuster.net)"
license = "MIT"
repository = "https://github.com/AlphaModder/space_email_api"

[dependencies]
hyper = "0.11.0"
futures = "0.1"
chrono = "0.4"
regex = "1.0"
serde_json = "1.0"
select = "0.4"
url = "1.0"
lazy_static = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
tokio-core = "0.1"
native-tls = "0.1"
tokio-tls = "0.1"