[package]
name = "space_email_api"
version = "0.3.1"
edition = "2018"
authors = ["AlphaModder"]
description = "A rust interface to Space Email (space.galaxybuster.net)"
license = "MIT"
repository = "https://github.com/AlphaModder/space_email_api"

[dependencies]
regex = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = "1.0"
select = "0.4"
chrono = "0.4"
futures = "0.3.1"
async-stream = "0.2.0"
reqwest = { version = "0.10.0", features = ["cookies"] }

[dev-dependencies]
tokio = { version = "0.2.0", features = ["macros"] }