[package]
name = "space_email_api"
version = "0.3.2"
edition = "2018"
authors = ["AlphaModder"]
description = "A rust interface to Space Email (space.galaxybuster.net)"
license = "MIT"
repository = "https://github.com/AlphaModder/space_email_api"

[dependencies]
regex = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = "1.0"
select = "0.6"
chrono = "0.4"
futures = "0.3"
async-stream = "0.2"
reqwest = { version = "0.11.20", features = ["cookies"] }
tendril = "0.4.3" # not used directly, version specified to prevent future-compat lint

[dev-dependencies]
tokio = { version = "^1.0", features = ["macros"] }